fixed overflow

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -25,6 +25,7 @@ html, body{
   height: auto !important;
   height: 100%;
   margin: 0 auto -120px;
+  overflow: hidden;
 }
 
 .push {
